--- a/rabbithole/package.json
+++ b/rabbithole/package.json
@@ -11,14 +11,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.6",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.6",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "@aws-amplify/ui-angular": "^2.4.0",
+    "angular-material": "^1.2.5",
+    "angular-material-sidenav": "^0.1.1",
     "aws-amplify": "^4.3.21",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
