Reinitialized auth and added auth UI componets
Trying to get the proper UI page instantiated

--- a/rabbithole/amplify/backend/backend-config.json
+++ b/rabbithole/amplify/backend/backend-config.json
@@ -7,7 +7,7 @@
     }
   },
   "auth": {
-    "rabbithole80cf7702": {
+    "rabbitholee3da45ed": {
       "service": "Cognito",
       "providerPlugin": "awscloudformation",
       "dependsOn": [],
