--- a/rabbithole/package.json
+++ b/rabbithole/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "[ -f src/aws-exports.js ] && mv src/aws-exports.js src/aws-exports.ts || ng serve; ng serve",
+    "build": "[ -f src/aws-exports.js ] && mv src/aws-exports.js src/aws-exports.ts || ng build; ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
-    "@aws-amplify/ui-angular": "^2.4.0",
+    "@aws-amplify/ui-angular": "^2.4.3",
     "angular-material": "^1.2.5",
     "angular-material-sidenav": "^0.1.1",
     "aws-amplify": "^4.3.21",
