--- a/rabbithole/amplify.yml
+++ b/rabbithole/amplify.yml
@@ -1,12 +1,12 @@
 version: 1
 applications:
   - appRoot: rabbithole
-    backend:
-      phases:
-        build:
-          commands:
-            - '# Execute Amplify CLI with the helper script'
-            - amplifyPush --simple
+    # backend:
+    #   phases:
+    #     build:
+    #       commands:
+    #         - '# Backend Deploying : for now we do not need auto deployment for backend (Except when we add testing)'
+    #         - amplifyPush --simple
     frontend:
       phases:
         preBuild:
