Fixing amplify.yml
I KNOW I AM COMMITING TO MAIN BUT THIS IS FOR DEVOPS

--- a/rabbithole/amplify.yml
+++ b/rabbithole/amplify.yml
@@ -1,12 +1,5 @@
 version: 1
 applications:
-  - appRoot: rabbithole
-    # backend:
-    #   phases:
-    #     build:
-    #       commands:
-    #         - '# Backend Deploying : for now we do not need auto deployment for backend (Except when we add testing)'
-    #         - amplifyPush --simple
     frontend:
       phases:
         preBuild:
@@ -22,3 +15,4 @@ applications:
       cache:
         paths:
           - node_modules/**/*
+    appRoot: rabbithole
