Added storage to AWS Amplify
- Used to interconnect with our Claims sub-system and S3 bucket

--- a/rabbithole/amplify/backend/backend-config.json
+++ b/rabbithole/amplify/backend/backend-config.json
@@ -45,5 +45,12 @@
         ]
       }
     }
+  },
+  "storage": {
+    "rabbitholeClaims": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
   }
 }
