--- a/rabbithole/package.json
+++ b/rabbithole/package.json
@@ -24,6 +24,7 @@
     "angular-material": "^1.2.5",
     "angular-material-sidenav": "^0.1.1",
     "aws-amplify": "^4.3.21",
+    "ngx-dropzone": "^3.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
