--- a/rabbithole/amplify/backend/backend-config.json
+++ b/rabbithole/amplify/backend/backend-config.json
@@ -13,11 +13,21 @@
     "rabbitholeUser": {
       "build": true,
       "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
+    "ryverEndpoint": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
+    "getUser": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
       "service": "Lambda",
       "dependsOn": [
         {
           "category": "storage",
-          "resourceName": "UserTable",
+          "resourceName": "user",
           "attributes": [
             "Name",
             "Arn"
@@ -76,7 +86,7 @@
       "providerPlugin": "awscloudformation",
       "dependsOn": []
     },
-    "UserTable": {
+    "user": {
       "service": "DynamoDB",
       "providerPlugin": "awscloudformation"
     }
@@ -89,6 +99,20 @@
         {
           "category": "function",
           "resourceName": "rabbitholeUser",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        }
+      ]
+    },
+    "rabbitholeuserAPI": {
+      "service": "API Gateway",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "getUser",
           "attributes": [
             "Name",
             "Arn"
