--- a/rabbithole/package.json
+++ b/rabbithole/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm run env && ng build",
+    "build-env": "npm run env",
+    "env": "ts-node src/environments/build-env.ts",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -25,6 +27,7 @@
     "angular-material-sidenav": "^0.1.1",
     "aws-amplify": "^4.3.21",
     "rxjs": "~7.5.0",
+    "ts-node": "^10.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
