--- a/rabbithole/package.json
+++ b/rabbithole/package.json
@@ -26,6 +26,7 @@
     "angular-material": "^1.2.5",
     "angular-material-sidenav": "^0.1.1",
     "aws-amplify": "^4.3.21",
+    "dotenv": "^16.0.1",
     "rxjs": "~7.5.0",
     "ts-node": "^10.8.1",
     "tslib": "^2.3.0",
