--- a/rabbithole/package.json
+++ b/rabbithole/package.json
@@ -20,12 +20,17 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@aws-amplify/cli": "^8.5.1",
     "@aws-amplify/ui-angular": "^2.4.3",
     "angular-material": "^1.2.5",
     "angular-material-sidenav": "^0.1.1",
     "aws-amplify": "^4.3.21",
+    "aws-sdk": "^2.1156.0",
+    "dotenv": "^16.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "util": "^0.12.4",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
