Added AWS Textract API calls

--- a/rabbithole/amplify/backend/backend-config.json
+++ b/rabbithole/amplify/backend/backend-config.json
@@ -30,6 +30,12 @@
       }
     }
   },
-  "storage": {},
+  "storage": {
+    "s3rabbitholeclaims": {
+      "service": "S3",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": []
+    }
+  },
   "api": {}
 }
