--- a/rabbithole/package.json
+++ b/rabbithole/package.json
@@ -26,10 +26,18 @@
     "@aws-amplify/ui-angular": "^2.4.3",
     "angular-material": "^1.2.5",
     "angular-material-sidenav": "^0.1.1",
+    "assert": "^2.0.0",
     "aws-amplify": "^4.3.21",
     "aws-sdk": "^2.1157.0",
+    "crypto-browserify": "^3.12.0",
+    "discord.js": "^13.6.0",
     "dotenv": "^16.0.1",
+    "https-browserify": "^1.0.0",
+    "node-fetch": "^3.2.6",
+    "os-browserify": "^0.3.0",
     "rxjs": "~7.5.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "ts-node": "^10.8.1",
     "tslib": "^2.3.0",
     "util": "^0.12.4",
