Revert "Finished Claims Subsystem"

--- a/rabbithole/amplify/backend/backend-config.json
+++ b/rabbithole/amplify/backend/backend-config.json
@@ -30,12 +30,6 @@
       }
     }
   },
-  "storage": {
-    "s3rabbitholeclaims": {
-      "service": "S3",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": []
-    }
-  },
+  "storage": {},
   "api": {}
 }
