--- a/rabbithole/amplify.yml
+++ b/rabbithole/amplify.yml
@@ -4,7 +4,7 @@ applications:
       phases:
         preBuild:
           commands:
-            - npm ci
+            - npm ci --force
         build:
           commands:
             - npm run build
