--- a/rabbithole/amplify.yml
+++ b/rabbithole/amplify.yml
@@ -4,7 +4,8 @@ applications:
       phases:
         preBuild:
           commands:
-            - npm i esbuild
+            - nvm install --lts
+            - nvm use --lts
             - npm ci
         build:
           commands:
