--- a/rabbithole/.gitignore
+++ b/rabbithole/.gitignore
@@ -56,6 +56,7 @@ amplify/backend/.temp
 build/
 dist/
 node_modules/
+aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
 amplifyconfiguration.dart
